--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.8.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "postgres": "^3.4.7",
