--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.19",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "postgres": "^3.4.7",
